useing baidu_tongji and duoshuo

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,9 +14,7 @@
         {{ content }}
         </section>
       </div>
-      {% if site.disqus_shortname and page.disqus != false %}
-        {% include disqus.html %}
-      {% endif %}
+      {% include duoshuo.html %}
       {% include links.html %}
     </div>
     {% include footer.html %}
