--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,5 @@
 <script src='{{ site.baseurl }}/javascripts/basics.js' type='text/javascript'></script>
 <meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
 <meta content='text/html; charset=utf-8' http-equiv='content-type' />
-{% if site.google_analytics_id %}
-  {% include ga.html %}
-{% endif %}
+{% include baidu_tongji.html %}
+
