--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,9 +18,7 @@
           {% include signoff.html %}
         </section>
       </div>
-      {% if site.disqus_shortname and page.disqus != false %}
-        {% include disqus.html %}
-      {% endif %}
+      {% include duoshuo.html %}
       {% include links.html %}
     </div>
     {% include footer.html %}
