--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 h2, h3, h4, h5 {
   margin: 2em 0 1em; }
 
@@ -7,7 +8,7 @@ html, body {
 body {
   background: #f9f9f9;
   color: #303030;
-  font-family: "Helvetica Neue", Arial, sans-serif;
+  font-family: 微软雅黑, 宋体, Arial, sans-serif;
   font-weight: 400;
   font-size: 13px;
   line-height: 19px;
@@ -301,9 +302,9 @@ pre {
   position: fixed;
   top: 50%;
   left: 50%;
-  font-size: 70px; }
+  font-size: 60px; }
 .paging .left {
-  margin-left: -430px; }
+  margin-left: -424px; }
 .paging .right {
   margin-left: 404px; }
 
