--- a/_assets/style.scss
+++ b/_assets/style.scss
@@ -11,10 +11,10 @@ html, body {
 body {
   background: #f9f9f9;
   color: #303030;
-  font-family: 微软雅黑, 宋体, Arial, sans-serif;
+  font-family: 宋体, Arial, sans-serif;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 13px;
+  line-height: 19px;
   padding: 0;
   margin: 0;
 }
